--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" />
     <link rel="icon" href="img/logo.png" />
     <link rel="stylesheet" href="css/style.css" />
-    <title>Laporan PKL Yoga Dharma</title>
+    <title>Laporan PKL </title>
   </head>
   <body>
     <!-- NAVBAR -->
@@ -51,7 +51,7 @@
       <div class="container">
         <div class="row justify-content-evenly">
           <div class="col-lg-6 home-detail">
-            <h1 class="heading">I'm Yoga Dharma <span>Web Developer</span></h1>
+            <h1 class="heading">I'm andika <span>Web Developer</span></h1>
             <div class="btn-home mt-4">
               <a href="https://drive.google.com/file/d/1Ov0PDLV9t5Hvcv8mTHlZYYV2L297vgLP/view" class="btn btn-contact py-2 px-3 px-lg-5 py-lg-2" target="_blank">Download Laporan</a>
             </div>
