--- a/Laporan/bab1.html
+++ b/Laporan/bab1.html
@@ -61,7 +61,7 @@
                       yang akan datang.
                     </p>
                     <p>
-                      Oleh karena itu, sistem kurikulum di SMK TI Bali Global menuntut para anak didik nya untuk memiliki ilmu pengetahuan di bidang teknologi dan informasi, dan lebih penting lagi para siswa yang telah selesai mengikuti
+                      Oleh karena itu, sistem kurikulum di SMK SWASTA AWAL KARYA PEMBANGUNAN menuntut para anak didik nya untuk memiliki ilmu pengetahuan di bidang teknologi dan informasi, dan lebih penting lagi para siswa yang telah selesai mengikuti
                       pendidikan, juga akan memiliki keterampilan serta kemampuan untuk menerapkan ilmu yang di milikinya, diterapkan dalam setiap pelaksanaan tugas di lapangan. Oleh karena itu, SMK TI Bali Global sebagai sekolah yang
                       mengkhususkan pendidikan dalam bidang teknologi dan informasi, menambah praktek kerja industri di kelas XI sebagai pelajaran yang wajib bagi semua siswa.
                     </p>
