--- a/Laporan/bab1.html
+++ b/Laporan/bab1.html
@@ -56,13 +56,13 @@
                       sampai dengan saat ini berkembang dengan pesat seiring dengan perkembangan ilmu pengetahuan dalam bidang informasi dan komunikasi sehingga mampu menciptakan alat-alat yang mendukung perkembangan Teknologi Informasi.
                     </p>
                     <p>
-                      Namun demikian pesatnya perkembangannya, maka saat ini diperlukan tenaga-tenaga ahli yang terdidik, terampil dan professional di bidang teknologi, maka dengan itu Civitas Akademika SMK TI Bali Global sebagai salah satu
+                      Namun demikian pesatnya perkembangannya, maka saat ini diperlukan tenaga-tenaga ahli yang terdidik, terampil dan professional di bidang teknologi, maka dengan itu Civitas Akademika SMK SWASTA AWAL KARYA PEMBANGUNAN sebagai salah satu
                       Sekolah Menengah Kejuruan yang khusus bergerang dalam bidang Teknologi Informasi untuk terus mengembangkan dan meningkatkan mutu pendidikan agar mampu mengimbangi laju perubahan ilmu pengetahuan dan teknologi di masa
                       yang akan datang.
                     </p>
                     <p>
                       Oleh karena itu, sistem kurikulum di SMK SWASTA AWAL KARYA PEMBANGUNAN menuntut para anak didik nya untuk memiliki ilmu pengetahuan di bidang teknologi dan informasi, dan lebih penting lagi para siswa yang telah selesai mengikuti
-                      pendidikan, juga akan memiliki keterampilan serta kemampuan untuk menerapkan ilmu yang di milikinya, diterapkan dalam setiap pelaksanaan tugas di lapangan. Oleh karena itu, SMK TI Bali Global sebagai sekolah yang
+                      pendidikan, juga akan memiliki keterampilan serta kemampuan untuk menerapkan ilmu yang di milikinya, diterapkan dalam setiap pelaksanaan tugas di lapangan. Oleh karena itu, SMK SWASTA AWAL KARYA PEMBANGUNAN sebagai sekolah yang
                       mengkhususkan pendidikan dalam bidang teknologi dan informasi, menambah praktek kerja industri di kelas XI sebagai pelajaran yang wajib bagi semua siswa.
                     </p>
                     <p>
