--- a/Laporan/bab1.html
+++ b/Laporan/bab1.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="icon" href="../img/logo.png" />
 
-    <title>Laporan PKL Yoga Dharma</title>
+    <title>Laporan PKL KU</title>
   </head>
   <body>
     <!-- NAVBAR -->
@@ -56,7 +56,7 @@
                       sampai dengan saat ini berkembang dengan pesat seiring dengan perkembangan ilmu pengetahuan dalam bidang informasi dan komunikasi sehingga mampu menciptakan alat-alat yang mendukung perkembangan Teknologi Informasi.
                     </p>
                     <p>
-                      Namun demikian pesatnya perkembangannya, maka saat ini diperlukan tenaga-tenaga ahli yang terdidik, terampil dan professional di bidang teknologi, maka dengan itu Civitas Akademika SMK SWASTA AWAL KARYA PEMBANGUNAN sebagai salah satu
+                      Namun demikian pesatnya perkembangannya, maka saat ini diperlukan tenaga-tenaga ahli yang terdidik, terampil dan professional di bidang teknologi, maka dengan itu SMK SWASTA AWAL KARYA PEMBANGUNAN sebagai salah satu
                       Sekolah Menengah Kejuruan yang khusus bergerang dalam bidang Teknologi Informasi untuk terus mengembangkan dan meningkatkan mutu pendidikan agar mampu mengimbangi laju perubahan ilmu pengetahuan dan teknologi di masa
                       yang akan datang.
                     </p>
