--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
             <h1>Some Of My Project</h1>
             <div class="row justify-content-center">
                <a class="col-lg-3" href="https://fxanz.github.io/Frontendmentor-NFT-Preview-Card-Component/" target="_blank"> <div class="project project-1"></div></a>  <!-- nama projek -->
+               <a class="col-lg-3" href="https://fxanz.github.io/Frontendmentor-NFT-Preview-Card-Component/" target="_blank"> <div class="project-2"></div></a>  <!-- nama projek -->
             </div>
           </div>
         </div>
