--- a/index.html
+++ b/index.html
@@ -89,7 +89,20 @@
             <h1 class="text-center">About Me</h1>
             <div class="row justify-content-evenly my-5">
               <div class="col-md-5 left-aboutme">
-                <h2>I'm just a teenager learning front-end development</h2>
+                <!-- animsi tulisan -->
+
+                <!-- animsi tulisan -->
+                <h3>
+                  I'm a
+                  <span
+                    class="typewrite"
+                    data-period="2000"
+                    data-type='["Full Stack Developer","Content Creator","Designer"]'
+                  >
+                  </span>
+                  <span class="typing">|</span>
+                  <span class="wrap"></span>
+                </h3>
                 <div class="social-icon">
                   <a href="#">
                     <i class="bi bi-whatsapp"></i>
@@ -172,6 +185,7 @@
       </div>
     </section>
     <!-- END OF MY INTERNSHIP -->
+    <script src="js/script.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </body>
