--- a/index.html
+++ b/index.html
@@ -92,17 +92,7 @@
                 <!-- animsi tulisan -->
 
                 <!-- animsi tulisan -->
-                <h3>
-                  I'm a
-                  <span
-                    class="typewrite"
-                    data-period="2000"
-                    data-type='["Full Stack Developer","Content Creator","Designer"]'
-                  >
-                  </span>
-                  <span class="typing">|</span>
-                  <span class="wrap"></span>
-                </h3>
+                <h2>I'm just a teenager learning front-end development</h2>
                 <div class="social-icon">
                   <a href="#">
                     <i class="bi bi-whatsapp"></i>
