--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
       </div>
     </section>
     <!-- END OF MY INTERNSHIP -->
-    <script src="js/script.js"></script>
+    <script src="./app.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </body>
