--- a/index.html
+++ b/index.html
@@ -70,9 +70,8 @@
         <div class="row justify-content-evenly">
           <div class="col-lg-6 home-detail">
             <!-- <h1 class="heading">I'm andika <span>Web Developer</span></h1> -->
-            <div class="typing-container">
-              <span id="sentence" class="sentence"></span>
-              <span class="input-cursor"></span>
+            <div class="container">
+              <p>Coding is <span class="typed-text"></span><span class="cursor">&nbsp;</span></p>
             </div>
             <!-- <h1 class="heading">I'm andika <span>Web Developer</span></h1> -->
             <div class="btn-home mt-4">
