--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <div class="col-lg-6 home-detail">
             <!-- <h1 class="heading">I'm andika <span>Web Developer</span></h1> -->
             <div class="container">
-              <p>Coding is <span class="typed-text"></span><span class="cursor">&nbsp;</span></p>
+              <p class="tulisan">Coding is <span class="typed-text"></span><span class="cursor">&nbsp;</span></p>
             </div>
             <!-- <h1 class="heading">I'm andika <span>Web Developer</span></h1> -->
             <div class="btn-home mt-4">
