--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
           <div class="collapse navbar-collapse d-lg-flex justify-content-lg-end py-3" id="navbarNavDropdown">
             <ul class="navbar-nav">
               <li class="nav-item">
+                <a class="nav-link" href="#">foto</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="#">Home</a>
               </li>
               <li class="nav-item">
