--- a/index.html
+++ b/index.html
@@ -182,6 +182,18 @@
         </div>
       </div>
     </section>
+
+    <!-- tempat menyimpan foto foto prakrin -->
+    <section class="myfoto" id="myfoto">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- tempat menyimpan foto foto prakrin -->
     <!-- END OF MY INTERNSHIP -->
     <script src="./app.js"></script>
 
