--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <div class="collapse navbar-collapse d-lg-flex justify-content-lg-end py-3" id="navbarNavDropdown">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="#">Foto</a>
+                <a class="nav-link" href="#myfoto">Foto</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Home</a>
