--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 </script>
 
   <body>
+    <body oncontextmenu="return false;"></body>
     <!-- NAVBAR -->
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
