--- a/index.html
+++ b/index.html
@@ -75,8 +75,10 @@
         <div class="row justify-content-evenly">
           <div class="col-lg-6 home-detail">
             <!-- <h1 class="heading">I'm andika <span>Web Developer</span></h1> -->
-            <div class="container">
-              <p class="tulisan">Saya Seorang <span class="typed-text"></span><span class="cursor">&nbsp;</span></p>
+            <div class="typing-container">
+              <span id="sentence" class="sentence">Here, take this </span>
+              <span id="feature-text"></span>
+              <span class="input-cursor"></span>
             </div>
             <!-- <h1 class="heading">I'm andika <span>Web Developer</span></h1> -->
             <div class="btn-home mt-4">
