--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <div class="col-lg-6 home-detail">
             <!-- <h1 class="heading">I'm andika <span>Web Developer</span></h1> -->
             <div class="typing-container">
-              <span id="tulisan" class="tulisan">Here, take this </span>
+              <span id="sentence" class="sentence">Here, take this </span>
               <span id="feature-text"></span>
               <span class="input-cursor"></span>
             </div>
