--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
   gtag('config', 'G-X45S8BK77Z');
 </script>
 
-  <body>
-    <body oncontextmenu="return false;"></body>
+  <body oncontextmenu="return false" onkeydown="return false;" onmousedown="return false;>
+    
     <!-- NAVBAR -->
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
