--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   gtag('config', 'G-X45S8BK77Z');
 </script>
 
-  <body oncontextmenu="return false" onkeydown="return false;" onmousedown="return false;>
+  <body >
     
     <!-- NAVBAR -->
     <header>
