--- a/Laporan/bab2.html
+++ b/Laporan/bab2.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="icon" href="../img/logo.png" />
 
-    <title>Laporan PKL Yoga Dharma</title>
+    <title>andika</title>
   </head>
   <body>
     <!-- NAVBAR -->
