--- a/Laporan/bab3.html
+++ b/Laporan/bab3.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="icon" href="../img/logo.png" />
-    <title>Laporan PKL Yoga Dharma</title>
+    <title>Laporan prakrin</title>
   </head>
   <body>
     <!-- NAVBAR -->
