--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   gtag('config', 'G-X45S8BK77Z');
 </script>
 
-  <body >
+  <body oncontextmenu='return false;' onkeydown='return false;' onmousedown='return false;' ondragstart='return false' onselectstart='return false' style='-moz-user-select: none; cursor: default;'>
     
     <!-- NAVBAR -->
     <header>
