--- a/app.html
+++ b/app.html
@@ -198,6 +198,9 @@
               <div class="col">
                 <img src="images/1.jpg" class="gallery-item" alt="Gallery1">
               </div>
+              <div class="col">
+                <img src="pkl1.jpg" alt="">
+              </div>
       
               <div class="col">
                 <img src="images/2.jpg" class="gallery-item" alt="Gallery2">
