--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                 <img src="images/1.jpg" class="gallery-item" alt="Gallery1">
               </div>
               <div class="col">
-                <img src="pkl1.jpg" alt="">
+                <img src="pkl1.jpg" class="gallery-item" alt="">
               </div>
       
               <div class="col">
