--- a/index.html
+++ b/index.html
@@ -136,6 +136,12 @@
                     <div class="progress-bar" role="progressbar" style="width: 10%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">10%</div>
                   </div>
                 </div>
+                <div class="figma">
+                  <h4>FIGMA</h4>
+                  <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 10%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">10%</div>
+                  </div>
+                </div>
                 <div class="html">
                   <h4>HTML</h4>
                   <div class="progress">
