--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
                     <div class="progress-bar" role="progressbar" style="width: 10%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">10%</div>
                   </div>
                 </div>
-                <div class="figma">
-                  <h4>FIGMA</h4>
+                <div class="python">
+                  <h4>python</h4>
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: 10%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">10%</div>
                   </div>
