--- a/index.html
+++ b/index.html
@@ -205,7 +205,13 @@
                 <img src="images/1.jpg" class="gallery-item" alt="Gallery1">
               </div>
               <div class="col">
-                <img src="images/pkl1.jpg" class="gallery-item" alt="">
+                <img src="images/pkl2.jpg" class="gallery-item" alt="">
+              </div>
+              <div class="col">
+                <img src="images/pkl2.jpg" class="gallery-item" alt="">
+              </div>
+              <div class="col">
+                <img src="images/pkl3.jpg" class="gallery-item" alt="">
               </div>
       
               <div class="col">
