--- a/index.html
+++ b/index.html
@@ -202,6 +202,9 @@
           <div class="col">
             <div class="row gy-4 row-cols-1 row-cols-sm-2 row-cols-md-3">
               <div class="col">
+                <img src="images/pkl1.jpg" class="gallery-item" alt="">
+              </div>
+              <div class="col">
                 <img src="images/pkl2.jpg" class="gallery-item" alt="">
               </div>
               <div class="col">
