--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                 <img src="images/pkl2.jpg" class="gallery-item" alt="">
               </div>
               <div class="col">
-                <img src="images/pkl2.jpg" class="gallery-item" alt="">
+                <img src="images/pkl4.jpg" class="gallery-item" alt="">
               </div>
               <div class="col">
                 <img src="images/pkl3.jpg" class="gallery-item" alt="">
@@ -231,7 +231,11 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <img src="images/1.jpg" class="modal-img" alt="Modal Image">
+        <img src="images/pkl2.jpg" class="modal-img" alt="Modal Image">
+        <img src="images/pkl4.jpg" class="modal-img" alt="Modal Image">
+        <img src="images/pkl3.jpg" class="modal-img" alt="Modal Image">
+        <img src="images/pkl1.jpg" class="modal-img" alt="Modal Image">
+        
       </div>
     </div>
   </div>
