--- a/index.html
+++ b/index.html
@@ -231,6 +231,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
+        <!-- jangan di ubah kalau belum paham -->
         <img src="images/pkl2.jpg" class="modal-img" alt="Modal Image">
         
         
