--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
       </div>
       <div class="modal-body">
         <!-- jangan di ubah kalau belum paham -->
-        <img src="images/pkl2.jpg" class="modal-img" alt="Modal Image">
+        <img src="images/1.jpg" class="modal-img" alt="Modal Image">
         
         
       </div>
