--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       crossorigin="anonymous"
     />
     
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="https://raw.githubusercontent.com/GF-Elite/projek1/main/css/style.css" />
     <title>Laporan PKL </title>
   </head>
   
