--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       crossorigin="anonymous"
     />
     
+    <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="https://res.cloudinary.com/dm0iqdadx/raw/upload/v1676949539/style.css" />
     <title>Laporan PKL </title>
   </head>
