--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
           <div class="col">
             <h1>Some Of My Project</h1>
             <div class="row justify-content-center">
-               <a class="col-lg-3" href="https://fxanz.github.io/Frontendmentor-NFT-Preview-Card-Component/" target="_blank"> <div class="project project-1"></div></a>  <!-- nama projek -->
+               <a class="col-lg-3" href="https://bio-andika.vercel.app/" target="_blank"> <div class="project project-1"></div></a>  <!-- nama projek -->
                
             </div>
             <div class="row justify-content-center">
