--- a/index.html
+++ b/index.html
@@ -173,8 +173,16 @@
                
             </div>
             <div class="row justify-content-center">
-               <a class="col-lg-3" href="https://companyprofile-virid.vercel.app/#" target="_blank"> <div class="project project-2"></div></a>  <!-- nama projek -->
-               
+               <a class="col-lg-3" href="https://companyprofile-virid.vercel.app/#" target="_blank"> <div class="project project-2"></div></a>  <!-- nama projek --> 
+          </div>
+            <div class="row justify-content-center">
+               <a class="col-lg-3" href="https://companyprofile-virid.vercel.app/#" target="_blank"> <div class="project project-2"></div></a>  <!-- nama projek --> 
+          </div>
+            <div class="row justify-content-center">
+               <a class="col-lg-3" href="https://companyprofile-virid.vercel.app/#" target="_blank"> <div class="project project-2"></div></a>  <!-- nama projek --> 
+          </div>
+            <div class="row justify-content-center">
+               <a class="col-lg-3" href="https://companyprofile-virid.vercel.app/#" target="_blank"> <div class="project project-2"></div></a>  <!-- nama projek --> 
           </div>
         </div>
       </div>
